--- a/Sass/utils/_keyframes.scss
+++ b/Sass/utils/_keyframes.scss
@@ -17,22 +17,22 @@
 }
 @keyframes button_like_fill{
     0%{
-        translate: center 0px;
+        opacity: 0;
     }
     20%{
-        translate: center 20px;
+        opacity: 0.2;
     }
     40%{
-        translate: center 40px;
+        opacity: 0.4;
     }
     60%{
-        translate: center 60px;
+        opacity: 0.7;
     }
     80%{
-        translate: center 80px;
+        opacity: 0.8;
     }
     100%{
-        translate: center 100px;
+        opacity: 1;
     }
 }
 @keyframes loader{
@@ -74,5 +74,40 @@
     100%{
         z-index: -11;
         opacity: 0;
+    }
+}
+@keyframes dish_animation_after{
+    0%{
+        width: 0%;
+        border-radius: 0px 15px 15px 0px;
+        right: 0;
+    }
+    100%{
+        width: 25%;
+        border-radius: 0px 15px 15px 0px;
+        right: -25%;
+    }
+}
+@keyframes dish_animation{
+    0%{
+        border-radius: 15px 0px 0px 15px;
+        width: 100%;
+    }
+    100%{
+        border-radius: 15px 0px 0px 15px;
+        width: 80%;
+    }
+}
+@keyframes dish_card_circle_animation{
+    0%{
+        color: violet;
+        opacity: 1;
+        transform: translateX(-20%);
+    }
+    100%{
+        color: violet;
+        opacity: 1;
+        transform: translateX(0%);
+
     }
 }
