--- a/style.css
+++ b/style.css
@@ -19,22 +19,22 @@
 }
 @keyframes button_like_fill {
   0% {
-    translate: center 0px;
+    opacity: 0;
   }
   20% {
-    translate: center 20px;
+    opacity: 0.2;
   }
   40% {
-    translate: center 40px;
+    opacity: 0.4;
   }
   60% {
-    translate: center 60px;
+    opacity: 0.7;
   }
   80% {
-    translate: center 80px;
+    opacity: 0.8;
   }
   100% {
-    translate: center 100px;
+    opacity: 1;
   }
 }
 @keyframes loader {
@@ -78,6 +78,40 @@
     opacity: 0;
   }
 }
+@keyframes dish_animation_after {
+  0% {
+    width: 0%;
+    border-radius: 0px 15px 15px 0px;
+    right: 0;
+  }
+  100% {
+    width: 25%;
+    border-radius: 0px 15px 15px 0px;
+    right: -25%;
+  }
+}
+@keyframes dish_animation {
+  0% {
+    border-radius: 15px 0px 0px 15px;
+    width: 100%;
+  }
+  100% {
+    border-radius: 15px 0px 0px 15px;
+    width: 80%;
+  }
+}
+@keyframes dish_card_circle_animation {
+  0% {
+    color: violet;
+    opacity: 1;
+    transform: translateX(-20%);
+  }
+  100% {
+    color: violet;
+    opacity: 1;
+    transform: translateX(0%);
+  }
+}
 .loader {
   font-family: "Shrikhand", sans-serif;
   font-size: 4em;
@@ -95,7 +129,7 @@
   -webkit-background-clip: text;
   background-image: linear-gradient(to top, #99E2D0 60%, transparent 40%);
   background-size: 2% 40%;
-  animation: loader 8000ms 100ms forwards ease-in-out;
+  animation: loader 5000ms 100ms forwards ease-in-out;
   opacity: 1;
 }
 
@@ -107,7 +141,7 @@
   position: absolute;
   z-index: 2;
   opacity: 0;
-  animation: page_loader 8100ms forwards;
+  animation: page_loader 5100ms forwards;
 }
 
 /****main button****/
@@ -208,21 +242,35 @@
   }
 }
 /****like button****/
+.button_like {
+  display: flex;
+  align-items: center;
+}
+
 .fas.fa-heart {
   -webkit-text-stroke: 1px black;
   font-size: 1.5em;
-  background-image: linear-gradient(to top, #9356DC 0%, #FF79DA 50%, transparent 50%);
+  display: flex;
+  position: relative;
+  justify-content: flex-end;
+  align-items: center;
+  color: transparent;
+}
+.fas.fa-heart::after {
+  content: "\f004";
+  position: absolute;
+  align-items: center;
+  background-image: linear-gradient(to bottom, #9356DC 0%, #FF79DA 100%);
   -webkit-background-clip: text;
   background-clip: text;
   -webkit-text-fill-color: transparent;
-  transform-origin: bottom;
-  background-position: -100% -100%;
-  background-size: 2% 100%;
+  opacity: 0;
 }
 .fas.fa-heart:hover {
   cursor: grab;
-  animation: button_like_fill 5000ms 100ms forwards ease-in-out;
-  -webkit-animation: button_like_fill 5000ms 100ms forwards ease-in-out;
+}
+.fas.fa-heart:hover::after {
+  animation: button_like_fill 3000ms 100ms forwards ease-in-out;
 }
 
 footer {
@@ -296,19 +344,14 @@ footer p {
   flex-direction: column;
   align-items: center;
   background-color: #F6F6F6;
-  position: absolute;
-  border-radius: 35px 35px 0px 0px;
   width: 100%;
   top: 250px;
-  z-index: 1;
   padding-bottom: 30px;
 }
 
 #presentation_menu img {
   width: 100%;
   height: 220px;
-  position: relative;
-  z-index: 0;
   object-fit: cover;
 }
 
@@ -316,7 +359,10 @@ footer p {
   display: flex;
   justify-content: center;
   padding: 30px 20px;
-  width: 90%;
+  width: calc(100% - 40px);
+  background-color: #F6F6F6;
+  margin-top: -30px;
+  border-radius: 35px 35px 0px 0px;
 }
 .presentation_menu_name_restaurant h1 {
   font-family: "Shrikhand", sans-serif;
@@ -369,72 +415,89 @@ footer p {
   animation: menu_apparition 2500ms 5000ms both ease-in-out;
 }
 
-.check {
-  background-color: #99E2D0;
+.dish_card {
   border-radius: 15px;
-  z-index: -1;
-  margin: 15px 0px;
+  margin: 15px 15px;
   height: 74px;
+  display: flex;
+  justify-content: flex-start;
+  box-shadow: #d1d1d1 2px 5px 20px;
+  box-sizing: content-box;
+  overflow: hidden;
+}
+.dish_card_box {
   width: 100%;
 }
-.check:hover {
+.dish_card:hover {
   cursor: grab;
 }
-.check .fa-check-circle {
-  z-index: -1;
+.dish_card .fa-check-circle::before {
+  content: "\f058";
+  background-color: #99E2D0;
+  display: flex;
   color: white;
   font-size: 1.4em;
-  position: relative;
-  right: -95%;
-  top: 25px;
+  position: absolute;
+  right: -20%;
+  top: 15px;
+  height: 74px;
+  width: 15%;
+  align-items: center;
+  justify-content: center;
+  opacity: 1;
+  z-index: 2;
+  transform: translateX(0);
 }
-.check .dish {
+.dish_card .dish {
+  display: flex;
+  justify-content: flex-start;
   background-color: #F6F6F6;
-  box-shadow: #d1d1d1 2px 5px 20px;
   border-radius: 15px;
   padding: 15px 20px;
   margin: 0px;
   position: relative;
-  top: -23px;
   z-index: 1;
-  animation: all 2000ms backwards ease-in;
+  width: 100%;
+  box-sizing: border-box;
 }
-.check .dish:hover {
-  cursor: grab;
-  border-radius: 15px 0px 0px 15px;
-  width: 80%;
+.dish_card .dish:hover {
+  animation: dish_animation 2000ms both ease-in-out;
 }
-.check .dish_name {
+.dish_card .dish:hover::after {
+  animation: dish_animation_after 2000ms both ease-in-out;
+}
+.dish_card .dish:hover .fa-check-circle::before {
+  animation: dish_card_circle_animation 2000ms both ease-in-out;
+}
+.dish_card .dish_name {
   max-width: 350px;
   padding-right: 60px;
   display: block;
   position: relative;
-  z-index: 1;
 }
-.check .dish_name p {
+.dish_card .dish_name p {
   text-align: left;
   text-overflow: ellipsis;
   overflow: hidden;
   white-space: nowrap;
 }
-.check .dish_price {
+.dish_card .dish_price {
   display: block;
   font-weight: 500;
   font-size: 0.9em;
   background: #F6F6F6;
   padding: 20px 10px 0px 5px;
   position: absolute;
-  z-index: 2;
   right: 10px;
   top: 15px;
   width: 30px;
 }
-.check p {
+.dish_card p {
   margin: 5px 0px 0px 0px;
   font-weight: 300;
   font-size: 0.8em;
 }
-.check .span {
+.dish_card .span {
   font-weight: 500;
   font-size: 1em;
 }
@@ -460,13 +523,13 @@ footer p {
     width: 90%;
   }
 
-  .check {
+  .dish_card {
     height: 64px;
   }
-  .check .dish {
+  .dish_card .dish {
     padding: 10px 15px;
   }
-  .check .fa-check-circle {
+  .dish_card .fa-check-circle {
     right: -90%;
     top: 20px;
   }
