--- a/Sass/themes/_stylemenu.scss
+++ b/Sass/themes/_stylemenu.scss
@@ -40,6 +40,7 @@
         font-family: 'Shrikhand', sans-serif;
         padding: 0;
         font-size: 1.9em;
+        width: 60%;
     }
 }
 .menu_restaurant{
@@ -47,6 +48,7 @@
     display: flex;
     flex-direction: column;
     width: 100%;
+    max-width: 1600px;
     
     & h2{
         text-transform: uppercase;
@@ -92,63 +94,52 @@
     margin: 15px 15px;
     height: 74px;
     display: flex;
-    justify-content: flex-start;
     box-shadow: $color-button-shadow 2px 5px 20px;
     box-sizing:content-box;
     overflow: hidden;
+    z-index: 1;
 
     &_box{
         width: 100%;
-    }
-
-    &:hover{
-        cursor: grab;
-    }
-    & .fa-check-circle::before{
-        content: '\f058';
-        background-color: $color-tertiary;
-        display: flex;
-        color: white;
-        font-size: 1.4em;
-        position: absolute;
-        right: -20%;
-        top: 15px;
+        position: relative;
+        overflow: hidden;
+        z-index: 1;
         height: 74px;
-        width: 15%;
-        align-items: center;
-        justify-content: center;
-        opacity: 1;
-        z-index: 2;
-        transform: translateX(0);
+
+        & .fa-check-circle{
+            background-color: $color-tertiary;
+            border-radius: 0px 15px 15px 0px;
+            display: flex;
+            color: white;
+            font-size: 1.4em;
+            position: absolute;
+            right: -15%;
+            top: 0px;
+            height: 74px;
+            width: 15%;
+            align-items: center;
+            justify-content: center;
+            z-index: 6;
+        }
     }
     & .dish{
         display: flex;
-        justify-content: flex-start;
+        justify-content: space-between;
+        align-items: center;
         background-color: $color-functionalities-back;
         border-radius: 15px;
         padding: 15px 20px;
         margin: 0px;
-        position: relative;
         z-index: 1;
         width: 100%;
+        height: 74px;
         box-sizing: border-box;
-        
+        position: absolute;
+        transform-origin: left;
+        transition: width 2000ms ease-in-out;
 
-        &:hover{
-            animation: dish_animation 2000ms both ease-in-out;
-            &::after{
-                animation: dish_animation_after 2000ms both ease-in-out;
-            }
-            & .fa-check-circle::before{
-                animation: dish_card_circle_animation 2000ms both ease-in-out;
-            }
-        }
         &_name{
-            max-width: 350px;
-            padding-right: 60px;
-            display: block;
-            position: relative;
-            
+            max-width: 250px;
             & p{
                 text-align: left;
                 text-overflow: ellipsis;
@@ -157,15 +148,12 @@
             }
         }
     &_price{
-        display: block;
         font-weight: 500;
         font-size: 0.9em;
         background: $color-functionalities-back;
-        padding: 20px 10px 0px 5px;
-        position: absolute;
-        right: 10px;
-        top: 15px;
-        width: 30px;
+        padding: 0;
+        align-self: flex-end;
+        min-width: 30px;
     }
 }
     & p{
@@ -177,9 +165,32 @@
         font-weight: 500;
         font-size: 1em;
     }
+    &:hover{
+        cursor: grab;
+        
+        & .fa-check-circle{
+            animation: dish_card_circle_translate 2000ms both ease-in-out;
+        }
+        & .far.fa-check-circle::before{
+            transform: rotate(1080deg);
+            transition: transform 2000ms ease-in-out 100ms;
+        }
+    }
+}
+/*responsive desktop*/
+@media all and (max-width: 1200px)
+{
+
+}
+/*responsive tablette*/
+@media all and (max-width: 1044px)
+{
+.dish_block{
+    width: 70%;
+}
 }
 /*responsive mobile*/
-@media all and (max-width: 847px)
+@media all and (max-width: 764px)
 {
 .presentation_menu_name_restaurant{
         justify-content: space-between;
@@ -194,18 +205,9 @@
 .underline{
     margin-bottom: 5px;
 }
-.dish_block{
-    width: 90%;
-}
 .dish_card{
-    height: 64px;
-    
     .dish{
     padding: 10px 15px;
-    }
-    & .fa-check-circle{
-        right: -90%;
-        top: 20px;
     }
 }
 .presentation_menu_name_restaurant h1{
@@ -213,5 +215,17 @@
 }
 .menu_restaurant h2{
     font-size: 0.9em;
+}
+}
+@media all and (max-width: 647px)
+{
+.dish_block{
+    width: 80%;
+}
+.dish_card:hover{
+    & .dish{
+        width: 80%;
+    }
+    
 }
 }
