--- a/Sass/utils/_mixins.scss
+++ b/Sass/utils/_mixins.scss
@@ -1,7 +1,7 @@
 @mixin h1{
     font-weight: 600;
-    width: 70%;
     margin: 0;
+    box-sizing: border-box;
 }
 @mixin button{
     background: $color-secondary;
