--- a/style.css
+++ b/style.css
@@ -78,38 +78,69 @@
     opacity: 0;
   }
 }
-@keyframes dish_animation_after {
+@keyframes dish_animation_price_bigscreen {
   0% {
-    width: 0%;
-    border-radius: 0px 15px 15px 0px;
-    right: 0;
+    transform: translateX(0);
   }
   100% {
-    width: 25%;
-    border-radius: 0px 15px 15px 0px;
-    right: -25%;
+    transform: translateX(-250%);
   }
 }
-@keyframes dish_animation {
+@keyframes dish_animation_price_desktop {
   0% {
-    border-radius: 15px 0px 0px 15px;
-    width: 100%;
+    transform: translateX(0);
   }
   100% {
-    border-radius: 15px 0px 0px 15px;
-    width: 80%;
+    transform: translateX(-220%);
   }
 }
-@keyframes dish_card_circle_animation {
+@keyframes dish_animation_price_tablette {
   0% {
-    color: violet;
-    opacity: 1;
-    transform: translateX(-20%);
+    transform: translateX(0);
   }
   100% {
-    color: violet;
-    opacity: 1;
+    transform: translateX(-200%);
+  }
+}
+@keyframes dish_animation_price_mobile {
+  0% {
+    transform: translateX(0);
+  }
+  100% {
+    transform: translateX(-170%);
+  }
+}
+@keyframes dish_animation_price_smallmobile {
+  0% {
+    transform: width(100%);
+  }
+  100% {
+    transform: width(80%);
+  }
+}
+@keyframes dish_card_circle_translate {
+  0% {
     transform: translateX(0%);
+  }
+  100% {
+    transform: translateX(-99%);
+  }
+}
+@keyframes dish_card_circle_rotate {
+  0% {
+    transform: rotate(360deg);
+  }
+  20% {
+    transform: rotate(180deg);
+  }
+  40% {
+    transform: rotate(180deg);
+  }
+  60% {
+    transform: rotate(180deg);
+  }
+  100% {
+    transform: rotate(0);
   }
 }
 .loader {
@@ -368,6 +399,7 @@ footer p {
   font-family: "Shrikhand", sans-serif;
   padding: 0;
   font-size: 1.9em;
+  width: 60%;
 }
 
 .menu_restaurant {
@@ -375,6 +407,7 @@ footer p {
   display: flex;
   flex-direction: column;
   width: 100%;
+  max-width: 1600px;
 }
 .menu_restaurant h2 {
   text-transform: uppercase;
@@ -420,60 +453,51 @@ footer p {
   margin: 15px 15px;
   height: 74px;
   display: flex;
-  justify-content: flex-start;
   box-shadow: #d1d1d1 2px 5px 20px;
   box-sizing: content-box;
   overflow: hidden;
+  z-index: 1;
 }
 .dish_card_box {
   width: 100%;
+  position: relative;
+  overflow: hidden;
+  z-index: 1;
+  height: 74px;
 }
-.dish_card:hover {
-  cursor: grab;
-}
-.dish_card .fa-check-circle::before {
-  content: "\f058";
+.dish_card_box .fa-check-circle {
   background-color: #99E2D0;
+  border-radius: 0px 15px 15px 0px;
   display: flex;
   color: white;
   font-size: 1.4em;
   position: absolute;
-  right: -20%;
-  top: 15px;
+  right: -15%;
+  top: 0px;
   height: 74px;
   width: 15%;
   align-items: center;
   justify-content: center;
-  opacity: 1;
-  z-index: 2;
-  transform: translateX(0);
+  z-index: 6;
 }
 .dish_card .dish {
   display: flex;
-  justify-content: flex-start;
+  justify-content: space-between;
+  align-items: center;
   background-color: #F6F6F6;
   border-radius: 15px;
   padding: 15px 20px;
   margin: 0px;
-  position: relative;
   z-index: 1;
   width: 100%;
+  height: 74px;
   box-sizing: border-box;
-}
-.dish_card .dish:hover {
-  animation: dish_animation 2000ms both ease-in-out;
-}
-.dish_card .dish:hover::after {
-  animation: dish_animation_after 2000ms both ease-in-out;
-}
-.dish_card .dish:hover .fa-check-circle::before {
-  animation: dish_card_circle_animation 2000ms both ease-in-out;
+  position: absolute;
+  transform-origin: left;
+  transition: width 2000ms ease-in-out;
 }
 .dish_card .dish_name {
-  max-width: 350px;
-  padding-right: 60px;
-  display: block;
-  position: relative;
+  max-width: 250px;
 }
 .dish_card .dish_name p {
   text-align: left;
@@ -482,15 +506,12 @@ footer p {
   white-space: nowrap;
 }
 .dish_card .dish_price {
-  display: block;
   font-weight: 500;
   font-size: 0.9em;
   background: #F6F6F6;
-  padding: 20px 10px 0px 5px;
-  position: absolute;
-  right: 10px;
-  top: 15px;
-  width: 30px;
+  padding: 0;
+  align-self: flex-end;
+  min-width: 30px;
 }
 .dish_card p {
   margin: 5px 0px 0px 0px;
@@ -501,9 +522,26 @@ footer p {
   font-weight: 500;
   font-size: 1em;
 }
+.dish_card:hover {
+  cursor: grab;
+}
+.dish_card:hover .fa-check-circle {
+  animation: dish_card_circle_translate 2000ms both ease-in-out;
+}
+.dish_card:hover .far.fa-check-circle::before {
+  transform: rotate(1080deg);
+  transition: transform 2000ms ease-in-out 100ms;
+}
 
+/*responsive desktop*/
+/*responsive tablette*/
+@media all and (max-width: 1044px) {
+  .dish_block {
+    width: 70%;
+  }
+}
 /*responsive mobile*/
-@media all and (max-width: 847px) {
+@media all and (max-width: 764px) {
   .presentation_menu_name_restaurant {
     justify-content: space-between;
   }
@@ -519,19 +557,8 @@ footer p {
     margin-bottom: 5px;
   }
 
-  .dish_block {
-    width: 90%;
-  }
-
-  .dish_card {
-    height: 64px;
-  }
   .dish_card .dish {
     padding: 10px 15px;
-  }
-  .dish_card .fa-check-circle {
-    right: -90%;
-    top: 20px;
   }
 
   .presentation_menu_name_restaurant h1 {
@@ -542,6 +569,15 @@ footer p {
     font-size: 0.9em;
   }
 }
+@media all and (max-width: 647px) {
+  .dish_block {
+    width: 80%;
+  }
+
+  .dish_card:hover .dish {
+    width: 80%;
+  }
+}
 body {
   margin: 0 auto;
   width: 100%;
@@ -550,7 +586,6 @@ body {
 }
 
 #main_page {
-  max-width: 1400px;
   margin: 0 auto;
 }
 
@@ -592,8 +627,9 @@ header img {
 }
 .concept h1 {
   font-weight: 600;
-  width: 70%;
   margin: 0;
+  box-sizing: border-box;
+  width: 100%;
   text-align: center;
 }
 .concept p {
@@ -609,13 +645,17 @@ header img {
 
 /****section functionalities of the website****/
 #website_functionalities {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   padding: 30px 0px;
 }
 
 h1 {
   font-weight: 600;
-  width: 70%;
   margin: 0;
+  box-sizing: border-box;
+  width: 100%;
   font-size: 1.6em;
   padding: 0px 20px;
 }
@@ -626,6 +666,15 @@ h1 {
   justify-content: center;
   margin-top: 30px;
   margin-bottom: 30px;
+  width: 100%;
+  max-width: 1600px;
+}
+
+.button_functionalities_instruction {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
 }
 
 /*responsive mobile*/
@@ -634,26 +683,31 @@ h1 {
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 0px 30px;
   }
 }
 /****section restaurants****/
 #presentation_restaurants {
   padding: 60px 0px;
   background-color: #F6F6F6;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 #presentation_restaurants_cartes {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  padding: 10px 20px;
+  padding: 10px 0px;
+  max-width: 1600px;
+  width: 100%;
 }
 
 h1 {
   font-weight: 600;
-  width: 70%;
   margin: 0;
+  box-sizing: border-box;
+  width: 100%;
   padding: 0px 20px;
 }
 
@@ -726,7 +780,6 @@ h1 {
     flex-direction: column;
     align-items: center;
     flex-wrap: nowrap;
-    padding: 10px 20px;
   }
 
   .block_carte_restaurant {
