ajout de tous les menus & button check & ellipsis

--- a/Sass/components/_button.scss
+++ b/Sass/components/_button.scss
@@ -43,6 +43,7 @@
         border: none;
         font-size: 1em;
         font-weight: 600;
+        text-align: center;
     }
 
     .fas{
@@ -60,6 +61,12 @@
         padding: 4px 8.5px;
         border-radius: 50px;
         font-size: 0.9em;
+    }
+    &_instruction{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
     }
     &:hover{
         cursor: grab;
@@ -84,7 +91,7 @@
     }
 }
 }
-@media all and (max-width: 847px){
+@media all and (max-width: 764px){
 .button_functionalities{
     width: 90%;
     margin: 15px 0px;
@@ -95,7 +102,7 @@
     }
 
     & .button_functionalities_instruction{
-        display: block;
+        flex-direction: row;
     }
 }   
 }
