--- a/Sass/style.scss
+++ b/Sass/style.scss
@@ -1,6 +1,7 @@
 /******************Accueil***************/
 @import "./base/colors";
 @import "./utils/mixins";
+@import "./utils/variables";
 @import "./utils/keyframes";
 @import "./components/loader";
 @import "./components/button";
@@ -85,7 +86,7 @@ h1{
     margin-top: 30px;
     margin-bottom: 30px;
     width: 100%;
-    max-width: 1600px;
+    max-width: $max-width;
     padding: 0px 15px;
     box-sizing: border-box;
 }
@@ -110,7 +111,7 @@ h1{
     flex-wrap: wrap;
     justify-content: center;
     padding: 10px 0px;
-    max-width: 1600px;
+    max-width: $max-width;
     width: 100%;
 }
 h1{
@@ -174,7 +175,8 @@ h1{
                 margin: 0;
             }
     }
-    &:hover{
+    /**Slightly magnifying animation on hover**/
+    &:hover, :active{
         transform: scale(1.04);
         transition: transform 400ms;
         box-shadow: darken($color-button-shadow, 40%) 3px 5px 7px;
