--- a/style.css
+++ b/style.css
@@ -56,6 +56,7 @@
   99.9% {
     opacity: 1;
     z-index: 2;
+    /**The loading spinner has to stay until the end of the animation**/
     transform: rotateY(740deg);
   }
   100% {
@@ -71,6 +72,7 @@
   99.9% {
     opacity: 1;
     z-index: 2;
+    /**The white page has to stay until the loading spinner disappear**/
   }
   100% {
     z-index: -11;
@@ -117,9 +119,11 @@
   margin: 0;
   background-clip: text;
   -webkit-background-clip: text;
+  /**For Chrome**/
   background-image: linear-gradient(to top, #99E2D0 60%, transparent 40%);
-  background-size: 2% 40%;
+  background-size: 1% 40%;
   animation: loader 5000ms 100ms forwards ease-in-out;
+  -webkit-animation: loader 5000ms 100ms forwards ease-in-out;
   opacity: 1;
 }
 
@@ -132,6 +136,7 @@
   z-index: 2;
   opacity: 0;
   animation: page_loader 5100ms forwards;
+  -webkit-animation: page_loader 5100ms forwards;
 }
 
 /****main button****/
@@ -149,8 +154,9 @@
   cursor: pointer;
   color: white;
   transition: all 400ms;
+  /**Lightened color on hover**/
 }
-.button:hover {
+.button:hover, .button :active {
   filter: brightness(120%);
   cursor: grab;
   box-shadow: #6b6b6b 3px 5px 7px;
@@ -172,6 +178,7 @@
   transition: all 400ms;
   width: 25%;
   margin: 0 20px;
+  /**Primary color on hover**/
 }
 .button_functionalities a {
   text-decoration: none;
@@ -203,12 +210,13 @@
   justify-content: center;
   align-items: center;
   width: 100%;
+  color: black;
 }
-.button_functionalities:hover {
+.button_functionalities:hover, .button_functionalities :active {
   cursor: grab;
   background-color: #f2eafb;
 }
-.button_functionalities:hover .fas {
+.button_functionalities:hover .fas, .button_functionalities :active .fas {
   color: #9356DC;
 }
 
@@ -254,6 +262,7 @@
   color: transparent;
 }
 .fas.fa-heart::after {
+  /****Button creation without modifying html for a background-color appearance on hover****/
   content: "\f004";
   position: absolute;
   align-items: center;
@@ -263,10 +272,10 @@
   -webkit-text-fill-color: transparent;
   opacity: 0;
 }
-.fas.fa-heart:hover {
+.fas.fa-heart:hover, .fas.fa-heart :active {
   cursor: grab;
 }
-.fas.fa-heart:hover::after {
+.fas.fa-heart:hover::after, .fas.fa-heart :active::after {
   animation: button_like_fill 3000ms 100ms forwards ease-in-out;
 }
 
@@ -357,8 +366,9 @@ footer p {
   justify-content: center;
   padding: 30px 20px;
   width: calc(100% - 40px);
+  /**Width decreased by padding inline**/
   background-color: #F6F6F6;
-  margin-top: -30px;
+  margin-top: -35px;
   border-radius: 35px 35px 0px 0px;
 }
 .presentation_menu_name_restaurant h1 {
@@ -403,6 +413,7 @@ footer p {
   display: flex;
   flex-direction: column;
   width: 60%;
+  /**Slow & slight apparition of the 3 blocks from bottom to top**/
 }
 .dish_block.entree {
   animation: menu_apparition 2500ms 200ms both ease-in-out;
@@ -423,8 +434,10 @@ footer p {
   box-sizing: content-box;
   overflow: hidden;
   z-index: 1;
+  /**Reduced width to make appear the check box on the right**/
+  /**Apparition of the check box with a rotating icon**/
 }
-.dish_card:hover .dish {
+.dish_card:hover .dish, .dish_card :active .dish {
   width: 80%;
 }
 .dish_card_box {
@@ -494,18 +507,17 @@ footer p {
   font-weight: 500;
   font-size: 1em;
 }
-.dish_card:hover {
+.dish_card:hover, .dish_card :active {
   cursor: grab;
 }
-.dish_card:hover .fa-check-circle {
+.dish_card:hover .fa-check-circle, .dish_card :active .fa-check-circle {
   animation: dish_card_circle_translate 1000ms both ease-in-out;
 }
-.dish_card:hover .far.fa-check-circle::before {
+.dish_card:hover .far.fa-check-circle::before, .dish_card :active .far.fa-check-circle::before {
   transform: rotate(1080deg);
   transition: transform 1000ms ease-in-out;
 }
 
-/*responsive desktop*/
 /*responsive tablette*/
 @media all and (max-width: 1044px) {
   .dish_block {
@@ -543,7 +555,7 @@ footer p {
 }
 @media all and (max-width: 647px) {
   .dish_block {
-    width: 80%;
+    width: 90%;
   }
 }
 body {
@@ -697,6 +709,7 @@ h1 {
   border-radius: 15px 15px 15px 15px;
   transform: scale(1);
   transition: all 400ms;
+  /**Slightly magnifying animation on hover**/
 }
 .carte_restaurant img {
   width: 100%;
@@ -730,7 +743,7 @@ h1 {
 .carte_restaurant .carte_restaurant_infos p {
   margin: 0;
 }
-.carte_restaurant:hover {
+.carte_restaurant:hover, .carte_restaurant :active {
   transform: scale(1.04);
   transition: transform 400ms;
   box-shadow: #6b6b6b 3px 5px 7px;
