--- a/Sass/components/_button.scss
+++ b/Sass/components/_button.scss
@@ -13,7 +13,7 @@
     color: white;
     transition: all 400ms;
     /**Lightened color on hover**/
-    &:hover, :active{
+    &:hover, :focus{
         filter: brightness(120%);
         cursor: grab;
         box-shadow: darken($color-button-shadow, 40%) 3px 5px 7px;
@@ -69,7 +69,7 @@
         color: black;
     }
     /**Primary color on hover**/
-    &:hover, :active{
+    &:hover, :focus{
         cursor: grab;
         background-color: lighten($color-primary, 35%);
         .fas{
@@ -127,7 +127,7 @@
         @include heart_fill;
         opacity: 0;
     }
-    &:hover, :active{
+    &:hover, :focus{
         cursor: grab;
         &::after{
             animation: button_like_fill 3000ms 100ms forwards ease-in-out;
