--- a/Sass/style.scss
+++ b/Sass/style.scss
@@ -176,7 +176,7 @@ h1{
             }
     }
     /**Slightly magnifying animation on hover**/
-    &:hover, :active{
+    &:hover, :focus{
         transform: scale(1.04);
         transition: transform 400ms;
         box-shadow: darken($color-button-shadow, 40%) 3px 5px 7px;
