--- a/style.css
+++ b/style.css
@@ -1,14 +1,14 @@
 /******************Accueil***************/
 @keyframes menu_apparition {
   0% {
-    transform: translateY(3px);
+    transform: translateY(5px);
     opacity: 0;
   }
   30% {
-    transform: translateY(2.5px);
+    transform: translateY(4px);
   }
   65% {
-    transform: translateY(2px);
+    transform: translateY(2.5px);
     opacity: 0.6;
   }
   100% {
@@ -153,9 +153,10 @@
   cursor: pointer;
   color: white;
   transition: all 400ms;
+  -webkit-transition: all 400ms;
   /**Lightened color on hover**/
 }
-.button:hover, .button :focus {
+.button:hover, .button :focus, .button :active {
   filter: brightness(120%);
   cursor: grab;
   box-shadow: #6b6b6b 3px 5px 7px;
@@ -175,6 +176,7 @@
   text-align: left;
   position: relative;
   transition: all 400ms;
+  -webkit-transition: all 400ms;
   width: 25%;
   margin: 0 20px;
   /**Primary color on hover**/
@@ -211,11 +213,11 @@
   width: 100%;
   color: black;
 }
-.button_functionalities:hover, .button_functionalities :focus {
+.button_functionalities:hover, .button_functionalities :focus, .button_functionalities :active {
   cursor: grab;
   background-color: #f2eafb;
 }
-.button_functionalities:hover .fas, .button_functionalities :focus .fas {
+.button_functionalities:hover .fas, .button_functionalities :focus .fas, .button_functionalities :active .fas {
   color: #9356DC;
 }
 
@@ -271,11 +273,12 @@
   -webkit-text-fill-color: transparent;
   opacity: 0;
 }
-.fas.fa-heart:hover, .fas.fa-heart :focus {
+.fas.fa-heart:hover, .fas.fa-heart :focus, .fas.fa-heart :active {
   cursor: grab;
 }
-.fas.fa-heart:hover::after, .fas.fa-heart :focus::after {
+.fas.fa-heart:hover::after, .fas.fa-heart :focus::after, .fas.fa-heart :active::after {
   animation: button_like_fill 3000ms 100ms forwards ease-in-out;
+  -webkit-animation: button_like_fill 3000ms 100ms forwards ease-in-out;
 }
 
 footer {
@@ -416,12 +419,15 @@ footer p {
 }
 .dish_block.entree {
   animation: menu_apparition 2500ms 200ms both ease-in-out;
+  -webkit-animation: menu_apparition 2500ms 200ms both ease-in-out;
 }
 .dish_block.meal {
   animation: menu_apparition 2500ms 2600ms both ease-in-out;
+  -webkit-animation: menu_apparition 2500ms 2600ms both ease-in-out;
 }
 .dish_block.dessert {
   animation: menu_apparition 2500ms 5000ms both ease-in-out;
+  -webkit-animation: menu_apparition 2500ms 5000ms both ease-in-out;
 }
 
 .dish_card {
@@ -436,7 +442,7 @@ footer p {
   /**Reduced width to make appear the check box on the right**/
   /**Apparition of the check box with a rotating icon**/
 }
-.dish_card:hover .dish, .dish_card :focus .dish {
+.dish_card:hover .dish, .dish_card :focus .dish, .dish_card :active .dish, .dish_card :active .dish {
   width: 80%;
 }
 .dish_card_box {
@@ -476,6 +482,7 @@ footer p {
   position: absolute;
   transform-origin: left;
   transition: width 900ms ease-in-out;
+  -webkit-transition: width 900ms ease-in-out;
 }
 .dish_card .dish_name {
   min-width: 75%;
@@ -506,15 +513,17 @@ footer p {
   font-weight: 500;
   font-size: 1em;
 }
-.dish_card:hover, .dish_card :focus {
+.dish_card:hover, .dish_card :focus, .dish_card :active, .dish_card :active {
   cursor: grab;
 }
-.dish_card:hover .fa-check-circle, .dish_card :focus .fa-check-circle {
+.dish_card:hover .fa-check-circle, .dish_card :focus .fa-check-circle, .dish_card :active .fa-check-circle, .dish_card :active .fa-check-circle {
   animation: dish_card_circle_translate 1000ms both ease-in-out;
+  -webkit-animation: dish_card_circle_translate 1000ms both ease-in-out;
 }
-.dish_card:hover .far.fa-check-circle::before, .dish_card :focus .far.fa-check-circle::before {
+.dish_card:hover .far.fa-check-circle::before, .dish_card :focus .far.fa-check-circle::before, .dish_card :active .far.fa-check-circle::before, .dish_card :active .far.fa-check-circle::before {
   transform: rotate(1080deg);
   transition: transform 1000ms ease-in-out;
+  -webkit-transition: transform 1000ms ease-in-out;
 }
 
 /*responsive tablette*/
@@ -708,6 +717,7 @@ h1 {
   border-radius: 15px 15px 15px 15px;
   transform: scale(1);
   transition: all 400ms;
+  -webkit-transition: all 400ms;
   /**Slightly magnifying animation on hover**/
 }
 .carte_restaurant img {
@@ -742,9 +752,10 @@ h1 {
 .carte_restaurant .carte_restaurant_infos p {
   margin: 0;
 }
-.carte_restaurant:hover, .carte_restaurant :focus {
+.carte_restaurant:hover, .carte_restaurant :focus, .carte_restaurant :active {
   transform: scale(1.04);
   transition: transform 400ms;
+  -webkit-transition: transform 400ms;
   box-shadow: #6b6b6b 3px 5px 7px;
 }
 
