--- a/Sass/themes/_stylemenu.scss
+++ b/Sass/themes/_stylemenu.scss
@@ -102,7 +102,7 @@
     z-index: 1;
 
     /**Reduced width to make appear the check box on the right**/
-    &:hover, :active{
+    &:hover{
         .dish{
             width: 80%;
         }
@@ -179,7 +179,7 @@
         font-size: 1em;
     }
     /**Apparition of the check box with a rotating icon**/
-    &:hover, :active{
+    &:hover{
         cursor: grab;
         
         & .fa-check-circle{
