--- a/Sass/style.scss
+++ b/Sass/style.scss
@@ -128,6 +128,7 @@ h1{
         font-size: 1em;
         color: black;
         font-weight: 300;
+        width: 100%;
     }
 }
 .carte_restaurant{
@@ -144,6 +145,13 @@ h1{
     transition: all 400ms;
     -webkit-transition: all 400ms;
 
+    /**Slightly magnifying animation on hover**/
+    &:hover{
+        transform: scale(1.04);
+        transition: transform 400ms;
+        -webkit-transition: transform 400ms;
+        box-shadow: darken($color-button-shadow, 40%) 3px 5px 7px;
+    }
     & img{
         width: 100%;
         height: 150px;
@@ -175,13 +183,6 @@ h1{
             & p{
                 margin: 0;
             }
-    }
-    /**Slightly magnifying animation on hover**/
-    &:hover, :focus, :active{
-        transform: scale(1.04);
-        transition: transform 400ms;
-        -webkit-transition: transform 400ms;
-        box-shadow: darken($color-button-shadow, 40%) 3px 5px 7px;
     }
 }
 /*responsive mobile*/
