--- a/style.css
+++ b/style.css
@@ -1,15 +1,8 @@
 /******************Accueil***************/
 @keyframes menu_apparition {
   0% {
-    transform: translateY(5px);
+    transform: translateY(15px);
     opacity: 0;
-  }
-  30% {
-    transform: translateY(4px);
-  }
-  65% {
-    transform: translateY(2.5px);
-    opacity: 0.6;
   }
   100% {
     transform: translateY(0px);
@@ -51,6 +44,7 @@
   }
   80% {
     background-position: center 50%;
+    transform: rotateY(0deg);
   }
   99.9% {
     opacity: 1;
@@ -156,7 +150,7 @@
   -webkit-transition: all 400ms;
   /**Lightened color on hover**/
 }
-.button:hover, .button :focus, .button :active {
+.button:hover {
   filter: brightness(120%);
   cursor: grab;
   box-shadow: #6b6b6b 3px 5px 7px;
@@ -213,11 +207,11 @@
   width: 100%;
   color: black;
 }
-.button_functionalities:hover, .button_functionalities :focus, .button_functionalities :active {
+.button_functionalities:hover {
   cursor: grab;
   background-color: #f2eafb;
 }
-.button_functionalities:hover .fas, .button_functionalities :focus .fas, .button_functionalities :active .fas {
+.button_functionalities:hover .fas {
   color: #9356DC;
 }
 
@@ -273,10 +267,10 @@
   -webkit-text-fill-color: transparent;
   opacity: 0;
 }
-.fas.fa-heart:hover, .fas.fa-heart :focus, .fas.fa-heart :active {
+.fas.fa-heart:hover {
   cursor: grab;
 }
-.fas.fa-heart:hover::after, .fas.fa-heart :focus::after, .fas.fa-heart :active::after {
+.fas.fa-heart:hover::after {
   animation: button_like_fill 3000ms 100ms forwards ease-in-out;
   -webkit-animation: button_like_fill 3000ms 100ms forwards ease-in-out;
 }
@@ -442,7 +436,7 @@ footer p {
   /**Reduced width to make appear the check box on the right**/
   /**Apparition of the check box with a rotating icon**/
 }
-.dish_card:hover .dish, .dish_card :focus .dish, .dish_card :active .dish, .dish_card :active .dish {
+.dish_card:hover .dish {
   width: 80%;
 }
 .dish_card_box {
@@ -513,14 +507,14 @@ footer p {
   font-weight: 500;
   font-size: 1em;
 }
-.dish_card:hover, .dish_card :focus, .dish_card :active, .dish_card :active {
+.dish_card:hover {
   cursor: grab;
 }
-.dish_card:hover .fa-check-circle, .dish_card :focus .fa-check-circle, .dish_card :active .fa-check-circle, .dish_card :active .fa-check-circle {
+.dish_card:hover .fa-check-circle {
   animation: dish_card_circle_translate 1000ms both ease-in-out;
   -webkit-animation: dish_card_circle_translate 1000ms both ease-in-out;
 }
-.dish_card:hover .far.fa-check-circle::before, .dish_card :focus .far.fa-check-circle::before, .dish_card :active .far.fa-check-circle::before, .dish_card :active .far.fa-check-circle::before {
+.dish_card:hover .far.fa-check-circle::before {
   transform: rotate(1080deg);
   transition: transform 1000ms ease-in-out;
   -webkit-transition: transform 1000ms ease-in-out;
@@ -703,6 +697,7 @@ h1 {
   font-size: 1em;
   color: black;
   font-weight: 300;
+  width: 100%;
 }
 
 .carte_restaurant {
@@ -719,6 +714,12 @@ h1 {
   transition: all 400ms;
   -webkit-transition: all 400ms;
   /**Slightly magnifying animation on hover**/
+}
+.carte_restaurant:hover {
+  transform: scale(1.04);
+  transition: transform 400ms;
+  -webkit-transition: transform 400ms;
+  box-shadow: #6b6b6b 3px 5px 7px;
 }
 .carte_restaurant img {
   width: 100%;
@@ -751,12 +752,6 @@ h1 {
 }
 .carte_restaurant .carte_restaurant_infos p {
   margin: 0;
-}
-.carte_restaurant:hover, .carte_restaurant :focus, .carte_restaurant :active {
-  transform: scale(1.04);
-  transition: transform 400ms;
-  -webkit-transition: transform 400ms;
-  box-shadow: #6b6b6b 3px 5px 7px;
 }
 
 /*responsive mobile*/
