--- a/Sass/components/_button.scss
+++ b/Sass/components/_button.scss
@@ -14,7 +14,7 @@
     transition: all 400ms;
     -webkit-transition: all 400ms;
     /**Lightened color on hover**/
-    &:hover{
+    &:hover, :focus{
         filter: brightness(120%);
         cursor: grab;
         box-shadow: darken($color-button-shadow, 40%) 3px 5px 7px;
@@ -71,7 +71,7 @@
         color: black;
     }
     /**Primary color on hover**/
-    &:hover{
+    &:hover, :focus{
         cursor: grab;
         background-color: lighten($color-primary, 35%);
         .fas{
@@ -129,7 +129,7 @@
         @include heart_fill;
         opacity: 0;
     }
-    &:hover{
+    &:hover, :focus{
         cursor: grab;
         &::after{
             animation: button_like_fill 3000ms 100ms forwards ease-in-out;
