--- a/Sass/themes/_stylemenu.scss
+++ b/Sass/themes/_stylemenu.scss
@@ -102,7 +102,7 @@
     z-index: 1;
 
     /**Reduced width to make appear the check box on the right**/
-    &:hover{
+    &:hover, :focus{
         .dish{
             width: 80%;
         }
@@ -179,8 +179,8 @@
         font-size: 1em;
     }
     /**Apparition of the check box with a rotating icon**/
-    &:hover{
-        
+    &:hover, :focus{
+        cursor: grab;
         
         & .fa-check-circle{
             animation: dish_card_circle_translate 1000ms both ease-in-out;
